--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.8.0",
     "redux": "^3.7.2",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "redux-typed-reducer": "~0.0.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
